<resources>
    <string name="app_name">SeeUs Configurator</string>
    <string name="name">Name</string>
    <string name="locker_mac_address">Mac address</string>
    <!--Main screen-->
    <string name="main_no_stations">You currently don’t have access to any station units. Please get in proximity to register device(s).</string>
    <string name="mpl_locker_details_title">Locker details</string>
    <string name="main_locker_battery">Battery:</string>
    <string name="main_locker_fw"> Nina firmware version:</string>
    <string name="main_locker_stm_ver"> STM firmware version:</string>
    <string name="main_station_settings">Station settings</string>
    <string name="main_locker_manage_buttons">Manage Buttons</string>
    <string name="main_locker_manage_network">Manage network</string>
    <string name="main_locker_registration_started">"Registration successfully started!"</string>
    <string name="main_locker_registration_error">"Error in registration!"</string>
    <string name="main_locker_force_open_update_error">"Button test error"</string>
    <string name="main_locker_debug_set_error">"Debug mode settingerror"</string>
    <string name="main_locker_debug_set_success">"Debug mode successfully started"</string>
    <string name="main_locker_ble_connection_error">"Error while connecting the device"</string>
    <string name="main_locker_apn_list">Available networks</string>
    <string name="app_common_internet_connection">Please check your internet connection!</string>
    <string name="nav_settings_language">Language</string>
    <string name="manage_peripherals_inproximity">In proximity</string>
    <string name="manage_peripherals_not_inproximity">Not in proximity</string>
    <string name="nav_home_mpl_title">SCU units</string>
    <string name="nav_notifications_warning">Are you sure you want to clear all notifications? This cannot be undone.</string>
    <string name="nav_alarms_title">Alarms</string>
    <string name="nav_settings_user_details">User details</string>
    <string name="nav_settings_change_password">Change password</string>
    <string name="login_submit_title">Sign in</string>
    <string name="register_submit_title">Register</string>
    <string name="register_in_progress">Register in progress</string>
    <string name="forgot_password_title">Forgot Your Password?</string>
    <string name="forgot_password_description_title">Please enter your email address</string>
    <string name="forgot_password_send">Send</string>
    <string name="key_sharing_delete_key_message">Are you sure you want to remove button from station device?</string>
    <string name="pending">Pending</string>
    <string name="reset_password_title">Reset Your Password</string>
    <string name="reset_password_description_title">Please enter your new password</string>
    <string name="reset_password_new">New password</string>
    <string name="reset_password_pin">Recovery pin</string>
    <string name="reset_password_confirm">Confirm password</string>
    <string name="reset_password_done">Done</string>
    <string name="delete_pending">Delete pending</string>
    <string name="registration_pending">Registration pending</string>
    <string name="manage_peripherals_registered">Registered</string>
    <string name="manage_peripherals_unregistered">Unregistered</string>
    <string name="main_gsm_status">Modem status:</string>
    <string name="main_gsm_rssi">Modem RSSI:</string>
    <string name="main_gsm_modem_queue">Modem queue:</string>
    <string name="main_gsm_modem_rat">RAT:</string>
    <string name="main_number_of_buttons">Number Of Buttons:</string>
    <string name="manage_peripherals_title">Button %s</string>
    <string name="nav_settings_app_version">App version: %s</string>
    <string name="nav_settings_new_password">"New" </string>
    <string name="nav_settings_retype_new">"Retype new" </string>
    <string name="locker_settings_error_name_empty_warning">Please enter the Latitude!</string>
    <string name="locker_settings_error_address_empty_warning">Please enter the longitude!</string>
    <string name="locker_settings_error_radius_empty_warning">Please enter the radius!</string>

    <string name="scu_latitude_dot_first_place">"Station latitude dot can not be on first place"</string>
    <string name="scu_latitude_dot_does_not_exist">"Station latitude does not contain dot"</string>
    <string name="scu_latitude_no_characters_after_dot">"Station latitude don't have number after dot."</string>
    <string name="scu_latitude_value_to_big">"Station latitude to big."</string>
    <string name="scu_latitude_value_to_small">"Station latitude to small."</string>
    <string name="scu_latitude_value_to_small_charachters">"Station latitude to small characters."</string>
    <string name="scu_latitude_value_to_many_charachters">"Station latitude to many characters."</string>


    <string name="scu_longitude_length_to_short">"Station longitude to short"</string>
    <string name="scu_longitude_dot_first_place">"Station longitude dot can not be on first place"</string>
    <string name="scu_longitude_dot_does_not_exist">"Station longitude does not contain dot"</string>
    <string name="scu_longitude_no_characters_after_dot">"Station longitude don't have number after dot."</string>
    <string name="scu_longitude_value_to_big">"Station longitude to big."</string>
    <string name="scu_longitude_value_to_small">"Station longitude to small."</string>
    <string name="scu_longitude_value_to_small_charachters">"Station longitude to small characters."</string>
    <string name="scu_longitude_value_to_many_charachters">"Station longitude to many characters."</string>


    <string name="stop_the_bus_simulation">Led Test</string>
    <string name="peripheral_settings_reboot">Reboot</string>
    <string name="peripheral_settings_debug_mode">Debug mode</string>
    <string name="peripheral_settings_reset">Reset device</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="locker_settings_save_changes" translatable="true">Save</string>
    <string name="locker_settings_reset_changes" translatable="true">Reset</string>
    <string name="edit_user_validation_blank_fields_exist">Please enter all user information.</string>
    <string name="edit_user_validation_current_password_invalid">Current password not correct!</string>
    <string name="edit_user_validation_current_user_invalid">Current user is not valid!</string>
    <string name="edit_user_validation_passwords_do_not_match">Password is incorrect</string>
    <string name="edit_user_validation_password_min_6_characters">Password must be at least 6 characters long</string>
    <string name="edit_user_validation_username_min_4_characters">Username must be at least 4 characters long</string>
    <string name="edit_user_validation_terms_and_conditions_not_checked">Please accept General Terms and Conditions and Privacy Statement</string>
    <string name="message_email_invalid">Email address not valid!</string>
    <string name="app_generic_latitude">"Station Device Latitude"</string>
    <string name="app_generic_longitude">"Station Device Longitude"</string>
    <string name="app_generic_radius">"Radius"</string>
    <string name="app_generic_email">"E-mail"</string>
    <string name="app_generic_submit">"Submit"</string>
    <string name="app_generic_clear_all">"Clear all"</string>
    <string name="app_generic_password_recovery">"Forgot your password?"</string>
    <string name="app_generic_no_gps_location_service">""No location services."</string>
    <string name="app_generic_no_ble">"Please turn bluetooth on."</string>
    <string name="app_generic_station_unit">"Station Unit Device"</string>
    <string name="app_generic_confirm">"Confirm"</string>
    <string name="app_generic_cancel">"Cancel"</string>
    <string name="app_generic_sign_in">"Sign in"</string>
    <string name="app_generic_password">"Password"</string>
    <string name="app_generic_username">Username</string>
    <string name="app_generic_no_network">No Internet connection.</string>
    <string name="app_generic_repeat_password">"Repeat password"</string>
    <string name="app_generic_server_error">"Error while connecting to server please check your internet connection"</string>
    <string name="successfully_saved_data">"Successfully saved data for user id %s!"</string>
    <string name="registration_error">"Error in registration!"</string>
    <string name="successfull_saved_network_configuration">"Network configuration setup successfully!"</string>
    <string name="successfully_updated">"Successfully updated"</string>
    <string name="error_updating_mpl">"Error while connecting the backend"</string>
    <string name="error_polygon_size">"Please enter at least 4 point"</string>
    <string name="error_station_location">"Please enter the device location"</string>
    <string name="app_generic_home">"Home"</string>
    <string name="app_generic_alerts">"Alerts"</string>
    <string name="app_generic_settings">"Settings"</string>
    <string name="app_generic_distance">"Distance: %s m"</string>
    <string name="app_settings_linked_location">"Linked Location Configuration"</string>
    <string name="app_settings_custom_location">"Custom Location Configuration"</string>
    <string name="station_settings_draw_polygon" translatable="true">Draw</string>
    <string name="station_settings_station_name" translatable="true">Station name:</string>
    <string name="station_settings_direction" translatable="true">Direction:</string>
    <string name="station_settings_epd_type" translatable="true">Epd type:</string>

    <string name="app_generic_name">"Name"</string>
    <string name="current_password">"Type current password"</string>
    <string name="intro_register_show_password">"Show password"</string>
    <string name="reset_password_match_error">"Entered passwords do not match"</string>

    <string name="logout_question">"Are you sure you want to sign out?"</string>
    <string name="logout_again">"You can sign in again at any time."</string>
    <string name="wrong_inserted_text_home_screen">"Nothing matches this inserted text. You can search devices by name or mac address."</string>
    <string name="hint_search_text_home_screen">"Filter"</string>

    <string name="offline_mode">"Offline mode"</string>
    <string name="sleep_mode">"Sleep mode"</string>
    <string name="fur_testing_purpose">"For testing purposes only. Use with extreme cautions!!"</string>


    <string name="delete_device_question">"WARNING!! This action Can't be undone you are going to erase the device, please confirm to continue with factory reset."</string>
    <string name="success_deleting_device">"Erase of the device successfully started."</string>
    <string name="error_deleting_device">"Error in deleting, reseting device!"</string>

    <string name="select_locker_location_title">"Select locker location"</string>

</resources>
