<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/main_locker_apn_list"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
            android:id="@+id/llApnNetwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <Spinner
                android:id="@+id/spinerapnNetworkSelection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner_background"
                android:gravity="center_vertical"
                android:popupBackground="@color/colorWhite" />

    </LinearLayout>


    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llApnNetwork">

        <RadioButton
                android:id="@+id/radioOffline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline_mode"
                android:textColor="@color/colorWhite"

                android:textSize="13sp"
                android:layout_marginRight="20dp"/>

        <RadioButton
                android:id="@+id/radioSleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_mode"
                android:textColor="@color/colorWhite"

                android:textSize="13sp"   />

    </RadioGroup>

    <CheckBox
            android:id="@+id/psmMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="PSM"
            android:textSize="13sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>


    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/psm_wraning_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fur_testing_purpose"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/psmMode"/>


    <hr.sil.android.seeusadmin.fonts.ButtonWithFont
            android:id="@+id/btnSaveChanges"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:letterSpacing="0.1"
            android:text="@string/locker_settings_save_changes"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
            android:id="@+id/progressBarNetworkChange"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
