<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_dialog"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp">

    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/logout_question"
            android:textColor="@color/colorBlack"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/logout_again"
            android:textColor="@color/colorBlack"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

    <hr.sil.android.seeusadmin.fonts.ButtonWithFont
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_generic_cancel"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/btnConfirm"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <hr.sil.android.seeusadmin.fonts.ButtonWithFont
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_generic_confirm"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />


</androidx.constraintlayout.widget.ConstraintLayout>
