<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/round_dialog">


    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="13sp"
            android:text="@string/delete_device_question"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <hr.sil.android.seeusadmin.fonts.ButtonWithFont
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_generic_cancel"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/btnConfirm"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <hr.sil.android.seeusadmin.fonts.ButtonWithFont
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_generic_confirm"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <ProgressBar
            android:id="@+id/progressBarDeleteDevice"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />


</androidx.constraintlayout.widget.ConstraintLayout>
