<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        tools:context="hr.sil.android.seeusadmin.view.fragment.LoginFragment">

    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="@string/app_generic_username"
            android:textColor="@color/colorWhite"

            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            android:paddingBottom="10dp">

        <hr.sil.android.seeusadmin.fonts.EdittextWithFont
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="text"
                android:maxLines="1"

                android:textSize="13sp"

                android:singleLine="true"

                android:background="@drawable/edittext_available_bottom_line_color"

                android:textColor="@color/colorWhite"

                android:textColorHint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        <ImageView
                android:id="@+id/ivName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/ic_register_email"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/tvEmailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/edit_user_validation_blank_fields_exist"
            android:textColor="@color/colorError"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clName" />

    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left"

            android:text="@string/app_generic_password"

            android:textColor="@color/colorWhite"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailError" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" >


        <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="text"
                android:maxLines="1"
                android:textSize="13sp"

                android:background="@drawable/edittext_available_bottom_line_color"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        <ImageView
                android:id="@+id/ivPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/ic_register_password"

                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/tvPasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/edit_user_validation_blank_fields_exist"
            android:textColor="@color/colorError"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clPassword" />

    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/tvShowPasswords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clPassword"

            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="13sp"
            android:text="@string/intro_register_show_password"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordError" />

    <hr.sil.android.seeusadmin.fonts.TextViewRegularFont
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/forgot_password_title"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tvShowPasswords" />


    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />


    <hr.sil.android.seeusadmin.fonts.ButtonWithFont
            android:id="@+id/btnLogin"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/app_generic_sign_in"
            android:textSize="16sp"
            android:letterSpacing="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
